iniciado a criação da tela com seção e navbar

--- a/index.html
+++ b/index.html
@@ -7,14 +7,56 @@
   <title>Bootstrap demo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;1,400&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-  <div class="bg-image"></div>
-  <div class="content"></div> <canvas id="myChart" ></canvas>
+  <header>
+    <nav role="navigation">
+      <ul class="anchor-links">
+        <li><a target="_self" href="#section-resume" class="anchor-link">Resume</a></li>
+        <li><a target="_self" href="#section-knowledge" class="anchor-link">Knowledge Graph</a></li>
+        <li><a target="_self" href="#section-timeline" class="anchor-link">Timeline</a></li>
+        <li><a target="_self" href="#section-recommendations" class="anchor-link">Recommendations</a></li>
+        <li><a target="_self" href="#section-projects" class="anchor-link">Projects</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main role="main">
+    <div class="content"></div>
+    <section class="section1">
+
+    </section>
+
+    <section id="section-resume" class="section2">
+
+    </section>
+
+    <section id="section-knowledge" class="section3">
+      <canvas id="myChart"></canvas>
+    </section>
+
+    <section id="section-timeline" class="section4">
+
+    </section>
+    
+    <section id="section-recommendations" class="section5">
+
+    </section>
+    <section id="section-projects" class="section6">
+
+    </section>
+  </main>
+  <footer role="footer"></footer>
+
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
